@@ -17,7 +17,8 @@ db2.text=LONG VARCHAR FOR BIT DATA
 mysql=org.gjt.mm.mysql.Driver
 mysql.tableclass=org.makumba.db.sql.mysql.RecordManager
 #mysql.dbclass=org.makumba.db.sql.mysql.Database
-mysql.tableMissing=S1000
+mysql.tableMissing-before308=S1000
+mysql.tableMissing=42S02
 mysql.lostConnection=08S01
 #mysql.duplicateEntry=S1009
 mysql.duplicateEntry.error=1062
